fix: overlaping issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
   font-size: 19px;
   font-weight: 300;
   scroll-behavior: smooth;
-  z-index: 10;
 }
 
 html {
